--- a/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
@@ -160,18 +160,17 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="block-item">
                     <h3>Notes</h3>
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1D6qD_h6ge7oKH-gFSc45x7icuWCB-OTi"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
+                            <p class="pdf-title">Unit 1</p>
+                            <p class="pdf-author">Harsh</p>
+                            <a href="https://drive.google.com/uc?export=download&id=1nn-y7IWppMtySkpdycVT3_H-px5O0GtJ" class="download-link"
                                 >Download</a
                             >
                         </div>
